--- a/css/style.css
+++ b/css/style.css
@@ -40,14 +40,12 @@ ol, ul{
 /*    Styling  Header    */
 /*************************/
 header{
-     
     overflow: hidden;
 }
  
 #top-header{
-         
     text-align: center;
-    height: 60px;
+    height: 0px;
 }
  
 /****************/   
@@ -110,8 +108,8 @@ header{
      
 #menu li:hover a, #menu li span{
     background: #ffffff;
-    color: #0074D9;
-    border-left: 1px solid #0074D9;
+    color: #000000;
+    border-left: 1px solid #000000;
     text-decoration: none;
 }
 
@@ -137,4 +135,116 @@ header{
     color: #ffffff;
     transform: translate(-30%, -30%);
     text-align: center;
+}
+
+/**********************************/
+/* Styling Main content Section 1 */
+/**********************************/
+#welcome
+{    overflow: hidden;
+    width: 1000px;
+    margin: 40px auto;
+}
+
+#welcome .title{
+    margin-top: 20px;
+    padding: 20px;
+    text-align: center;
+}
+
+#welcome p{
+    margin-bottom: 40px;
+    text-align: center;
+}
+
+/**********************************/
+/* Styling Main content Section 2 */
+/**********************************/
+#section-2{
+    overflow: hidden;
+    margin-top: 1em;
+    padding-top: 1em;
+    border-top: 1px solid rgba(0, 0, 0, 0.2);
+    text-align: center;
+}
+
+.row #column1,
+.row #column2,
+.row #column3{
+        float: left;
+        width: 320px;
+        padding: 20px 40px 80px 40px;
+}
+
+.column-title h2{
+    margin: 1em 0em;
+    font-size: 1.6em;
+    font-weight: 700;
+}
+
+.button {
+    text-decoration: none;
+    text-align: center;
+    display: inline-block;
+    font-size: 16px;
+    background-color: #000000;
+    color: white;
+    border: 2px solid #000000;
+    padding: 16px 32px;
+    margin: 4px 2px;
+    -webkit-transition-duration: 0.4s; /* Safari */
+    transition-duration: 0.4s;
+    cursor: pointer;
+}
+     
+.button:hover {
+    background-color: white;
+    color: #000000;
+}
+
+/**********************************/
+/* Styling Main content Footer */
+/**********************************/
+.company-details{
+    overflow: hidden;
+    padding: 3em 0em;
+    background: #E3F0F7;
+    text-align: center;
+    margin-top: 5em;
+}
+
+#footer #col1,
+#footer #col2,
+#footer #col3{
+    float: left;
+    width: 320px;
+    padding: 0px 40px 0px 40px;
+}
+
+#footer #icon{
+    display: block;
+    margin-bottom: 1em;
+    font-size: 3em;
+}
+
+.copyright
+{
+    overflow: hidden;
+    padding: 3em 0em;
+    border-top: 20px solid rgba(0, 0, 0, 0.08);
+    text-align: center;
+    background: #000000;
+}
+
+.copyright p
+{
+    letter-spacing: 1px;
+    font-size: 0.90em;
+    color: rgba(255, 255, 255, 0.6);
+}
+
+.copyright a
+{
+    text-decoration: none;
+    color: rgba(255, 255, 255, 0.8);
 }
